--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
 node_modules
 
-78.ea5f730f.png
-cat.bb61c42f.png
-index.975ef6c8.js
-index.975ef6c8.js.map
-index.e8265c92.css
-index.e8265c92.css.map
-index.html  
+# 78.ea5f730f.png
+# cat.bb61c42f.png
+# index.975ef6c8.js
+# index.975ef6c8.js.map
+# index.e8265c92.css
+# index.e8265c92.css.map
+# index.html  
