--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     },
     "dependencies": {
         "express": "4.18.1",
-        "handlebars": "4.7.7"
+        "handlebars": "4.7.7",
+		"uuid": "8.3.2"
     },
     "engines": { 
         "node": "v16.x"
