--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "license": "ISC",
     "devDependencies": {
         "@parcel/transformer-sass": "2.6.2",
+        "@types/node": "18.7.3",
         "@typescript-eslint/eslint-plugin": "5.32.0",
         "@typescript-eslint/parser": "5.32.0",
         "eslint": "8.21.0",
@@ -37,9 +38,9 @@
         }
     },
     "dependencies": {
-        "@types/node": "^18.7.2",
         "express": "4.18.1",
         "handlebars": "4.7.7",
+        "node": "18.7.0",
         "uuid": "8.3.2"
     },
     "engines": {
