--- a/package.json
+++ b/package.json
@@ -7,24 +7,30 @@
         "build": "parcel build src/index.html --no-cache",
         "start": "node server.js",
         "lint": "eslint src/**/*.ts",
-        "lint:fix": "eslint src/**/*.ts --fix"
+        "lint:fix": "eslint src/**/*.ts --fix",
+        "test": "mocha --require ts-node/register --require ./mochaSetup.js './src/**/*.test.ts'"
     },
     "author": "Arkadiy",
     "license": "ISC",
     "devDependencies": {
         "@parcel/transformer-sass": "2.6.2",
+        "@types/chai": "^4.3.3",
+        "@types/mocha": "^10.0.0",
         "@types/node": "18.7.3",
         "@typescript-eslint/eslint-plugin": "5.32.0",
         "@typescript-eslint/parser": "5.32.0",
+        "chai": "^4.3.6",
         "eslint": "8.21.0",
         "eslint-config-airbnb": "19.0.4",
         "eslint-config-prettier": "8.5.0",
         "eslint-plugin-html": "7.1.0",
         "eslint-plugin-prettier": "4.2.1",
+        "mocha": "^10.0.0",
         "parcel": "2.6.2",
         "parcel-transformer-hbs": "1.0.4",
         "prettier": "2.7.1",
         "sass": "1.54.0",
+        "ts-node": "^10.9.1",
         "typescript": "4.7.4"
     },
     "targets": {
