--- a/package.json
+++ b/package.json
@@ -3,35 +3,60 @@
     "version": "1.0.1",
     "source": "src/index.html",
     "scripts": {
-        "dev": "parcel src/index.html --open --port 3000 --no-source-maps --no-cache",
-        "build": "parcel build src/index.html --no-cache",
+        "dev": "webpack serve",
         "start": "node server.js",
         "lint": "eslint src/**/*.ts",
-        "lint:fix": "eslint src/**/*.ts --fix"
+        "lint:fix": "eslint src/**/*.ts --fix",
+        "test": "mocha --require ts-node/register --require ./mochaSetup.js './src/**/*.test.ts'",
+        "build": "webpack --mode=production --node-env=production"
     },
     "author": "Arkadiy",
     "license": "ISC",
     "devDependencies": {
         "@parcel/transformer-sass": "2.6.2",
+        "@types/chai": "4.3.3",
+        "@types/jsdom": "20.0.0",
+        "@types/mocha": "10.0.0",
         "@types/node": "18.7.3",
+        "@types/webpack-env": "^1.18.0",
         "@typescript-eslint/eslint-plugin": "5.32.0",
         "@typescript-eslint/parser": "5.32.0",
+        "@webpack-cli/generators": "^2.5.0",
+        "chai": " 4.3.6",
+        "crypto-browserify": "^3.12.0",
+        "css-loader": "^6.7.1",
         "eslint": "8.21.0",
         "eslint-config-airbnb": "19.0.4",
         "eslint-config-prettier": "8.5.0",
         "eslint-plugin-html": "7.1.0",
         "eslint-plugin-prettier": "4.2.1",
-        "parcel": "2.6.2",
-        "parcel-transformer-hbs": "1.0.4",
+        "file-loader": "^6.2.0",
+        "handlebars-loader": "^1.7.2",
+        "html-webpack-plugin": "^5.5.0",
+        "jsdom": "^20.0.1",
+        "mini-css-extract-plugin": "^2.6.1",
+        "mocha": "^10.0.0",
+        "mocha-jsdom": "^2.0.0",
         "prettier": "2.7.1",
-        "sass": "1.54.0",
-        "typescript": "4.7.4"
+        "sass": "^1.54.0",
+        "sass-loader": "^13.1.0",
+        "stream-browserify": "^3.0.0",
+        "ts-loader": "^9.4.1",
+        "ts-node": "10.9.1",
+        "typescript": "4.7.4",
+        "webpack": "^5.74.0",
+        "webpack-cli": "4.10.0",
+        "webpack-dev-server": "4.11.1"
+    },
+    "browser": {
+        "crypto": false
     },
     "targets": {
         "default": {
             "sourceMap": true,
             "includeNodeModules": [
-                "handlebars"
+                "handlebars",
+                "nanoid"
             ],
             "context": "browser",
             "distDir": "./dist"
@@ -40,11 +65,8 @@
     "dependencies": {
         "express": "4.18.1",
         "handlebars": "4.7.7",
-        "node": "18.7.0",
-        "uuid": "8.3.2"
-    },
-    "engines": {
-        "node": "v16.x"
+        "nanoid": "3.0.0",
+        "node": "18.7.0"
     },
     "description": "Chat - приложение для обмена сообщениями",
     "repository": {
