--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,21 @@
 {
+    "ts-node": {
+        "files": true
+    },
     "compilerOptions": {
-    "outDir": "dist",
-    "target": "es2017",
-    "declaration": false,
-    "module": "commonjs",
-    "strictNullChecks": true,
-    "sourceMap": true,  	
-	"noImplicitAny": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    }
-} 
+        "outDir": "dist",
+        "target": "es2017",
+        "declaration": false,
+        "module": "commonjs",
+        "strictNullChecks": true,
+        "sourceMap": true,
+        "noImplicitAny": true,
+        "noUnusedLocals": true,
+        "noUnusedParameters": true,
+        "moduleResolution": "node",
+        "allowSyntheticDefaultImports": true,     
+        "esModuleInterop": true,
+        "allowJs": true,      
+    },
+    "include": ["./src/**/*"],
+}
