--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,29 +1,26 @@
 {
-    "extends": "airbnb",
+    "env": {
+        "browser": true,
+        "es2021": true
+    },
+    "extends": ["eslint:recommended", "plugin:@typescript-eslint/recommended"],
     "parser": "@typescript-eslint/parser",
+    "parserOptions": {
+        "ecmaVersion": "latest",
+        "sourceType": "module"
+    },
     "plugins": ["@typescript-eslint"],
     "rules": {
-        "max-len": [2, 140],
-        "@typescript-eslint/no-unused-vars": 2,
-        "no-underscore-dangle": 0,
-        "indent": ["error", 4],
-        "import/extensions": [
-            "error",
-            "ignorePackages",
-            {
-                "js": "never",
-                "jsx": "never",
-                "ts": "never",
-                "tsx": "never"
-            }
-        ]
-    },
-    "settings": {
-        "import/resolver": {
-            "node": {
-                "paths": ["src"],
-                "extensions": [".js", ".jsx", ".ts", ".tsx"]
-            }
-        }
+        "@typescript-eslint/no-non-null-assertion": "off",
+        "@typescript-eslint/no-var-requires": 0,
+        "no-empty-function": "off",
+        "@typescript-eslint/no-empty-function": [0],
+        "no-unused-vars": "off",
+        "@typescript-eslint/no-unused-vars": [0],
+        "ban-types": 0,
+        "@typescript-eslint/no-explicit-any": "off",
+        "no-prototype-builtins": 0,
+        "prefer-const": "off",
+        "@typescript-eslint/ban-ts-comment": "off"
     }
-}
+}  
