--- a/package.json
+++ b/package.json
@@ -18,33 +18,36 @@
         "@types/jsdom": "20.0.0",
         "@types/mocha": "10.0.0",
         "@types/node": "18.7.3",
-        "@types/webpack-env": "^1.18.0",
-        "@typescript-eslint/eslint-plugin": "5.32.0",
+        "@types/sinon": "10.0.13",
+        "@types/webpack-env": "1.18.0",
+        "@typescript-eslint/eslint-plugin": "5.40.0",
         "@typescript-eslint/parser": "5.32.0",
-        "@webpack-cli/generators": "^2.5.0",
-        "chai": " 4.3.6",
-        "crypto-browserify": "^3.12.0",
-        "css-loader": "^6.7.1",
+        "@webpack-cli/generators": "2.5.0",
+        "chai": "4.3.6",
+        "crypto-browserify": "3.12.0",
+        "css-loader": "6.7.1",
         "eslint": "8.21.0",
         "eslint-config-airbnb": "19.0.4",
         "eslint-config-prettier": "8.5.0",
         "eslint-plugin-html": "7.1.0",
         "eslint-plugin-prettier": "4.2.1",
-        "file-loader": "^6.2.0",
-        "handlebars-loader": "^1.7.2",
-        "html-webpack-plugin": "^5.5.0",
-        "jsdom": "^20.0.1",
-        "mini-css-extract-plugin": "^2.6.1",
-        "mocha": "^10.0.0",
-        "mocha-jsdom": "^2.0.0",
+        "file-loader": "6.2.0",
+        "handlebars-loader": "1.7.2",
+        "html-webpack-plugin": "5.5.0",
+        "husky": "8.0.1",
+        "jsdom": "20.0.1",
+        "mini-css-extract-plugin": "2.6.1",
+        "mocha": "10.0.0",
+        "mocha-jsdom": "2.0.0",
         "prettier": "2.7.1",
-        "sass": "^1.54.0",
-        "sass-loader": "^13.1.0",
-        "stream-browserify": "^3.0.0",
-        "ts-loader": "^9.4.1",
+        "sass": "1.54.0",
+        "sass-loader": "13.1.0",
+        "sinon": "14.0.1",
+        "stream-browserify": "3.0.0",
+        "ts-loader": "9.4.1",
         "ts-node": "10.9.1",
         "typescript": "4.7.4",
-        "webpack": "^5.74.0",
+        "webpack": "5.74.0",
         "webpack-cli": "4.10.0",
         "webpack-dev-server": "4.11.1"
     },
@@ -67,6 +70,9 @@
         "handlebars": "4.7.7",
         "nanoid": "3.0.0",
         "node": "18.7.0"
+    },
+    "engines": {
+        "node": "v16.x"
     },
     "description": "Chat - приложение для обмена сообщениями",
     "repository": {
