--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
         "lint": "eslint src/**/*.ts",
         "lint:fix": "eslint src/**/*.ts --fix",
         "test": "mocha --require ts-node/register --require ./mochaSetup.js './src/**/*.test.ts'",
-        "build": "webpack --mode=production --node-env=production"
+        "build": "webpack --mode=production --node-env=production",
+        "prepare": "husky install"
     },
     "author": "Arkadiy",
     "license": "ISC",
